# ove2xml

./: .gitignore  CMakeLists.txt  README.md  ove2xml-gui.pro  ove2xml.desktop  ove2xml.pro  ove2xml.spec.in
cmake_admin/: CreateManpages.cmake  FindWindres.cmake
images/: ove2xml.icns  ove2xml.qrc  ove2xml.rc
src/: CMakeLists.txt
src/app/: About.cpp  About.h  About.ui  ConvertWindow.cpp  ConvertWindow.h  ConvertWindow.ui  ConvertXmlThread.cpp  ConvertXmlThread.h  CoreData.cpp  CoreData.h  FileBrowser.cpp  FileBrowser.h  FileBrowser.ui  LoadOveThread.cpp  LoadOveThread.h  OveConvertor.cpp  OveConvertor.h  main-gui.cpp  main.cpp
src/ove/: ove.cpp  ove.h
src/xml/: IXmlNotify.h  XmlBuffer.cpp  XmlBuffer.h  XmlSerialize.cpp  XmlSerialize.h  XmlWriter.cpp  XmlWriter.h  XmlWriterFactory.cpp  XmlWriterFactory.h  XmlWriterMeasure.cpp  XmlWriterMeasure.h  XmlWriterPtr.h  XmlWriterStructure.cpp  XmlWriterStructure.h
